[gd_scene load_steps=5 format=3 uid="uid://yuhgvk38yl5u"]

[ext_resource type="PackedScene" uid="uid://bc5n2wpdgdgd8" path="res://objects/ui/build_tooltips/base_tooltip.tscn" id="1_ctn1l"]
[ext_resource type="Script" path="res://objects/ui/build_tooltips/landing_pad_build_tooltip.gd" id="2_p7tq0"]
[ext_resource type="Texture2D" uid="uid://b2qcqcgb1fqoc" path="res://sprites/items/ore.tres" id="2_qyvsb"]
[ext_resource type="PackedScene" uid="uid://dvoy7rycpxh0m" path="res://objects/ui/build_tooltips/inventory/build_inventory.tscn" id="3_4vly7"]

[node name="LandingPadBuildTooltip" instance=ExtResource("1_ctn1l")]
script = ExtResource("2_p7tq0")

[node name="Label" parent="VBoxContainer" index="0"]
text = "Landing pad"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
text = "Expected delivery resource"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer" index="1"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="RecipeIcon" type="TextureRect" parent="VBoxContainer/VBoxContainer/HBoxContainer/Control" index="0"]
unique_name_in_owner = true
layout_mode = 1
offset_right = 64.0
offset_bottom = 64.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_qyvsb")

[node name="RecipeName" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "Minerals"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" index="3"]
layout_mode = 2

[node name="BuildInventory" parent="VBoxContainer" index="4" instance=ExtResource("3_4vly7")]
unique_name_in_owner = true
layout_mode = 2
